tests/conformance/invalid/invalid_role_literal.svp
-- invalid_role_literal.svp — rol no reconocido en cellspec

codomain K3 = { APTO, NO_APTO, INDETERMINADO };

output_semantics Klin {
  APTO -> "Clasificación fuerte favorable";
  NO_APTO -> "Clasificación fuerte desfavorable";
  INDETERMINADO -> "Sin clasificación fuerte";
}

cellspec C1 {
  b: 3;
  codomain: K3;
  semantics: Klin;
  role: Experto;
}
